[package]
name = "token-swap"
version = "0.0.0"
edition = "2021"
description = "Uniswap like Solana Token Swap Example"
repository = "https://github.com/YunSuk-Yeo/solana-token-swap"
license = "Apache-2.0"

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
enum_dispatch = "0.3.7"
bytemuck = "1.7.2"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
thiserror="1.0"
solana-program = "1.10.15"
spl-math = { version = "0.1", features = [ "no-entrypoint" ] }
spl-token = { version = "3.3", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-sdk = "1.10.15"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
